deployment/nodesvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs
spec:
  type: ClusterIP
  selector:
    app: nodejs
  ports:
    - protocol: TCP
      port: 80
      targetPort: 800
