deployment/nodejs-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs
spec:
  ingressClassName: nginx
  rules:
  - host: "kubernetes.docker.internal"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: nodejs
            port:
              number: 80
